<?xml version="1.0" encoding ="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/root"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center|top"
            android:id="@+id/topb">


                <Button
                android:id="@+id/node1"
                android:text="@string/Node1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="Node1"/>

                <Button
                android:id="@+id/node2"
                android:text="@string/Node2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="Node2" />

                <Button
                android:id="@+id/node3"
                android:text="@string/Node3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="Node3" />
        </LinearLayout>
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center|bottom">

                    <Button
                    android:id="@+id/Router1"
                    android:text="@string/Router1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Router1"/>

                    <Button
                    android:id="@+id/Router2"
                    android:text="@string/Router2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Router2"/>

                    <Button
                    android:id="@+id/Router3"
                    android:text="@string/Router3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Router3"/>
            </LinearLayout>
    </LinearLayout>












